commit tree 3512480d4072c4005f15d04aadfb0bab56b0d0e4

--- a/index.html
+++ b/index.html
@@ -9,32 +9,30 @@
 
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
+      <form action="" method="POST">
+        <label for="fullname">What's your full name?</label>
+        <input type="text" name="fullname" id="fullname" placeholder="Enter Name" required/>
+
+        <label for="email">What is your email address?</label>
+        <input type="email" name="email" id="email" placeholder="Enter Email" required/>
+
+        <label for="phone">What is your phone number?</label>
+        <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)"/>
+        <label for="message">Is there anything else you would like to add?</label>
+        <textarea id="message" name="message" placeholder="Enter Message"></textarea>
+
+        <input type="checkbox" id="checkbox" name="business-needs-1" value="cro"/> Conversion Rate Optimization (CRO)
+        <input type="checkbox" id="checkbox" name="business-needs-2" value="ux-consulting"/> UX Consulting
+        <input type="checkbox" id="checkbox" name="business-needs-3" value="website-redesign"/> Website Redesign
+
+        <input type="submit" value="submit"/>
+        
+
+
+
+      </form>
 
     <!-- First, create a form tag where our inputs will be nested -->
-
-
-      <!-- Add a label for 'fullname'-->
-
-      <!-- Add a text input with the id and name attributes set to 'fullname' -->
-      <!-- Include the place holder text "Enter Name" and make this input required -->
-
-
-      <!-- Add a label for 'email'-->
-
-      <!-- Add a email input with the id and name attributes set to 'email' -->
-      <!-- Include the place holder text "Enter Email" and make this input required -->
-
-
-      <!-- Add a label for 'phone'-->
-
-      <!-- Add a telephone input with the id and name attributes set to 'phone' -->
-      <!-- Include the place holder text "Enter Telephone (optional)" -->
-
-
-      <!-- Add a label for 'message'-->
-
-      <!-- Add a textarea tag with the id and name attributes set to 'message' -->
-      <!-- Include the place holder text "Enter Message" -->
 
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
